<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Cloud</string>
    <string name="app_name_debug">Cloud(Debug)</string>
	<string name="slogon">Give apps to friends</string>
	<string name="start">See my apps</string>
	<string name="share">Share</string>
    <string name="share_menu_label">Share via Cloud</string>
    <string name="cancel">Cancel</string> 
    <string name="back">Back</string> 
    <string name="loading">Loading...</string> 
    <string name="upload">Upload</string> 
    <string name="uploading">Uploading...</string> 
    <string name="uploaded">Uploaded. Tap to share.</string> 
    <string name="tell_friends">Tell friends</string>
    <string name="done">Done</string>
    <string name="err_no_SD">Can\'t access SD card. To continue, make sure your SD card is ready.</string> 
    <string name="err_no_network_title">Network not available</string> 
    <string name="err_no_network_message">Please make sure your Wi-Fi or Mobile networks is enabled.</string> 
    <string name="err_upload_failed">Upload failed, please make sure your network connection is good and retry.</string> 
    <string name="err_failed">Failed</string> 
    <string name="share_via_email_title">Get App from Cloud</string> 
    <string name="tell_friends_via">Send to friends via</string>
    <string name="send">Send</string>
    <string name="refresh">Refresh</string>
    <string name="retry">Retry</string>
    <string name="confirm_prompt">Are you sure?</string>
    <string name="ok">Ok</string>
    <string name="settings">Settings</string>
    
    <string name="upgrade">Upgrade now!</string>  
    <string name="about">About</string>  
    <string name="about_cloud">About Cloud</string>  
    <string name="version_name">Version %s</string>  
    <string name="up2date">Your Cloud is up to date</string>  
    <string name="not_up2date">New version %s is available! Check the recent changes: </string>  
    <string name="cloud_update">Cloud Update</string>  
    
    <string name="app_count">You have %d apps</string>
    <string name="app_version">Version %s</string>
    <string name="app_size">Size %.2fMB</string>
    <string name="first_step">Upload</string>
    <string name="second_step">Share</string>
    <string name="not_in_cloud">This app is not uploaded to the Cloud yet, do it now.</string>
    <string name="in_cloud">%s is on Cloud</string>
    <string name="uploading_prompt">You can get back, leave it works in background and get notified when the job is done.</string>
    <string name="uploading_queued">Waiting for uploading...</string>
    <string name="move_to_background">Move to background</string>
    <string name="uploading_queued_prompt">Uploading, you will get notified when it\'s done.</string>
    <string name="size_sent" formatted="false">%d%%, %dKB sent</string>
    <string name="swably_ads">Try Swably</string>  
    <string name="swably_url">"http://swably.com?r=cloud"</string>  
    
</resources>
