<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
	android:layout_width="fill_parent" 
	android:layout_height="fill_parent"
	android:background="?backgroundMain"
	>
	<include 
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		layout="@layout/header"
	/>
	<LinearLayout
	    android:orientation="vertical"
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content"
		>
		<LinearLayout
		    android:orientation="horizontal"
			android:layout_width="fill_parent" 
			android:layout_height="wrap_content"
			android:padding="10dip"
			>
			<ImageView android:id="@+id/icon" 
				android:layout_width="48dip" 
				android:layout_height="48dip"
				android:layout_marginRight="10dip"
			/>
			<LinearLayout 
				android:orientation="vertical"
				android:layout_width="fill_parent" 
				android:layout_height="wrap_content"
				android:layout_weight="1"
				>
				<TextView android:id="@+id/txtName" 
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:textSize="20sp"
					android:textColor="?colorContent"
				/>
				<TextView android:id="@+id/txtVersion" 
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:textSize="14sp"
					android:textColor="@color/gray"
				/>
				<TextView android:id="@+id/txtSize" 
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:textSize="14sp"
					android:textColor="@color/gray"
				/>
			</LinearLayout>
		</LinearLayout>
	</LinearLayout>
	<LinearLayout android:id="@+id/viewUnknown"
	    android:orientation="vertical"
		android:layout_width="fill_parent" 
		android:layout_height="fill_parent"
		android:visibility="gone"
		>
		<LinearLayout
		    android:orientation="vertical"
			android:layout_width="fill_parent" 
			android:layout_height="fill_parent"
			android:padding="10dip"
			android:layout_weight="1"
			android:gravity="top"
			>
		</LinearLayout>
		<LinearLayout 
			android:orientation="horizontal"
			android:layout_width="fill_parent" 
	        android:layout_height="wrap_content" 
			style="@style/buttonBar"
			android:gravity="bottom"
			>
			<Button android:id="@+id/btnRetry" 
				android:text="@string/retry"
				android:layout_width="fill_parent" 
	            android:layout_height="wrap_content" 
	            style="@style/btn"
			/>
		</LinearLayout>
	</LinearLayout>
	<LinearLayout android:id="@+id/viewUpload"
	    android:orientation="vertical"
		android:layout_width="fill_parent" 
		android:layout_height="fill_parent"
		android:visibility="gone"
		>
		<LinearLayout
		    android:orientation="vertical"
			android:layout_width="fill_parent" 
			android:layout_height="fill_parent"
			android:padding="10dip"
			android:layout_weight="1"
			android:gravity="top"
			>
			<TextView android:id="@+id/txtPrompt" 
				android:text="@string/not_in_cloud"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textSize="20sp"
				android:textColor="@color/title"
				android:layout_marginLeft="20dip"
				android:layout_marginRight="20dip"
			/>
		</LinearLayout>
		<LinearLayout 
			android:orientation="horizontal"
			android:layout_width="fill_parent" 
	        android:layout_height="wrap_content" 
			style="@style/buttonBar"
			android:gravity="bottom"
			>
			<Button android:id="@+id/btnUpload" 
				android:text="@string/first_step"
				android:layout_width="fill_parent" 
	            android:layout_height="wrap_content" 
	            style="@style/btn"
			/>
		</LinearLayout>
	</LinearLayout>
	<LinearLayout android:id="@+id/viewUploading"
	    android:orientation="vertical"
		android:layout_width="fill_parent" 
		android:layout_height="fill_parent"
		android:visibility="gone"
		>
		<LinearLayout
		    android:orientation="vertical"
			android:layout_width="fill_parent" 
			android:layout_height="fill_parent"
			android:padding="10dip"
			android:layout_weight="1"
			android:gravity="top"
			>
			<ProgressBar android:id="@+id/progressBar" 
				style="?android:attr/progressBarStyleHorizontal" 
				android:layout_width="fill_parent" 
				android:layout_height="wrap_content"
				android:indeterminate="true"
			>
			</ProgressBar>
			<TextView android:id="@+id/txtSizeSent"
				android:text="@string/uploading_queued"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textSize="14sp"
				android:textColor="@color/gray"
				android:layout_marginTop="5dip"
			/>
		</LinearLayout>
		<LinearLayout 
			android:orientation="horizontal"
			android:layout_width="fill_parent" 
	        android:layout_height="wrap_content" 
			style="@style/buttonBar"
			android:gravity="bottom"
			>
			<Button android:id="@+id/btnBack" 
				android:text="@string/move_to_background"
				android:layout_width="fill_parent" 
	            android:layout_height="wrap_content" 
	            style="@style/btn"
			/>
		</LinearLayout>
	</LinearLayout>
	<LinearLayout android:id="@+id/viewShare"
	    android:orientation="vertical"
		android:layout_width="fill_parent" 
		android:layout_height="fill_parent"
		android:visibility="gone"
		>
		<LinearLayout
		    android:orientation="vertical"
			android:layout_width="fill_parent" 
			android:layout_height="fill_parent"
			android:paddingBottom="10dip"
			android:layout_weight="1"
			android:gravity="center_horizontal"
			>
			<ImageView   
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content"
				android:src="@drawable/cloud_big"
			/>
			<TextView android:id="@+id/txtInCloud" 
				android:text="@string/in_cloud"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textSize="18sp"
				android:textColor="@color/title"
				android:layout_marginLeft="20dip"
				android:layout_marginRight="20dip"
			/>
		</LinearLayout>
		<LinearLayout 
			android:orientation="horizontal"
			android:layout_width="fill_parent" 
	        android:layout_height="wrap_content" 
			style="@style/buttonBar"
			android:gravity="bottom"
			>
	        <Button android:id="@+id/btnTell"
				android:text="@string/second_step"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            style="@style/btn"
	        />
		</LinearLayout>
	</LinearLayout>
</LinearLayout>
